Allow supplying non-temporary handler lambdas

Adjust one test case to use such a lambda.

Fixes: QTBUG-104481
Task-number: QTBUG-100868
Change-Id: I96e30fd167b8c2f8240316bff9c283efdb910541
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Marc Mutz <marc.mutz@qt.io>
(cherry picked from commit b5f8b59c70313a8e944a331d8493632dc000e951)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>